Fixed horizontal scroll and duplicate media queries

--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,23 +1,10 @@
 .cover {
   width: 1184px;
-  /* height: 740px; */
   margin: 0 auto;
   position: relative;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .cover {
-    width: 100%;
-  }
-}
-
-@media screen and (min-width: 321px) and (max-width: 1023px) {
-  .cover {
-    width: 100%;
-  }
-}
-
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 1279px) {
   .cover {
     width: 100%;
   }
