--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -9,7 +9,7 @@
 	color: white;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
 	.intro__title {
 		margin: 0 16px 40px 0;
 		font-size: 32px;
